--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,12 @@
 	<listener>
 		<listener-class>com.example.servlet.InitServlet</listener-class>
 	</listener>
+	
+    <resource-ref>
+        <description>Example DB Connection</description>
+        <res-ref-name>jdbc/ExampleDB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
